objects/SFConnectedappinfo__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <type>Email</type>
    </fields>
    <label>SFConnectedappinfo</label>
</CustomObject>